--- a/translations/names+intl-icu.de.xlf
+++ b/translations/names+intl-icu.de.xlf
@@ -856,7 +856,7 @@
     <unit id="38Pnm9V" name="Zm Schlafen Reichts Motel">
       <segment>
         <source>Zm Schlafen Reichts Motel</source>
-        <target>Zm Schlafen Reichts Motel</target>
+        <target>Zum Schlafen Reichts Motel</target>
       </segment>
     </unit>
     <unit id="ugpUYNk" name="Hotel Peculiar">
