--- a/translations/council+intl-icu.fr.xlf
+++ b/translations/council+intl-icu.fr.xlf
@@ -1495,7 +1495,7 @@
     </unit>
     <unit id="AraAi_U" name="Klar Einstein, Kopf oder Zahl zm eine Persion aus {_voted} auszuwählen.">
       <notes>
-        <note category="german">Klar Einstein, Kopf oder Zahl zm eine Persion aus {_voted} auszuwählen.</note>
+        <note category="german">Klar Einstein, Kopf oder Zahl um eine Persion aus {_voted} auszuwählen.</note>
         <note category="from">db://CouncilEntryTemplate</note>
         <note category="state">madeup</note>
       </notes>
