--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -65,6 +65,7 @@
       <notes>
         <note category="german">News</note>
         <note category="from">twig:///templates/ajax/soul/news.html.twig;twig:///templates/ajax/soul/shell.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>News</source>
@@ -595,6 +596,7 @@
       <notes>
         <note category="german">Saison {season}</note>
         <note category="from">twig:///templates/ajax/soul/shell.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Saison {season}</source>
@@ -795,6 +797,7 @@
       <notes>
         <note category="german">Saison</note>
         <note category="from">twig:///templates/ajax/soul/import_preview.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Saison</source>
@@ -1145,6 +1148,7 @@
       <notes>
         <note category="german">Infos</note>
         <note category="from">twig:///templates/ajax/soul/import_preview.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Infos</source>
@@ -1315,6 +1319,7 @@
       <notes>
         <note category="german">Saison {n}</note>
         <note category="from">twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Saison {n}</source>
@@ -2396,6 +2401,7 @@
       <notes>
         <note category="german">Saison {number}</note>
         <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Saison {number}</source>
@@ -2406,6 +2412,7 @@
       <notes>
         <note category="german">Pos.</note>
         <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Pos.</source>
@@ -2416,6 +2423,7 @@
       <notes>
         <note category="german">Score</note>
         <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Score</source>
@@ -2436,6 +2444,7 @@
       <notes>
         <note category="german">Lang.</note>
         <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Lang.</source>
@@ -3376,6 +3385,7 @@
       <notes>
         <note category="german">BBCode</note>
         <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>BBCode</source>
