--- a/translations/legal+intl-icu.de.xlf
+++ b/translations/legal+intl-icu.de.xlf
@@ -2,6 +2,9 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="de">
   <file id="legal.de">
     <unit id="oSNe_8G" name="Datenschutzerklärung">
+      <notes>
+        <note category="from">twig:///templates/ajax/public/privacy.html.twig</note>
+      </notes>
       <segment>
         <source>Datenschutzerklärung</source>
         <target>Datenschutzerklärung</target>
